--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.7.10"
   },
   "devDependencies": {
+    "dotenv": "^6.2.0",
     "nodemon": "^1.19.4"
   }
 }
